# lib_qadc

./: .gitignore  CHANGELOG.rst  Jenkinsfile  README.md  README.rst  index.rst  requirements.txt  settings.yml
design/: adc_calib.py  qadc_model.py
doc/: Doxyfile.inc  exclude_patterns.inc
doc/programming_guide/: index.rst  qadc.rst  qadc_pot.rst
doc/programming_guide/images/: qadc_post_proc.drawio
doc/rst/: qadc.rst
doc/rst/images/: .$qadc_pot_schem.drawio.bkp  .$qadc_pot_schem.drawio.dtmp  qadc_pot_schem.drawio  qadc_rheo_schem.drawio
examples/: CMakeLists.txt
examples/pot_reader/: CMakeLists.txt
examples/pot_reader/src/: CMakeLists.txt  main.xc
examples/rheo_reader/: CMakeLists.txt
lib_padc/: module_build_info
lib_padc/api/: adc_pot.h
lib_padc/src/: adc_pot.xc  adc_utils.h
lib_qadc/: lib_build_info.cmake  module_build_info
lib_qadc/api/: adc_pot.h  adc_rheo.h  qadc.h  qadc_pot.h  qadc_rheo.h
lib_qadc/src/: IsSimulation.S  adc_pot.xc  adc_pot_lut_gen.c  adc_rheo.xc  adc_utils.h  adc_utils.xc  asm_utils.S  qadc_c_pre_init.c  qadc_c_wrapper.c  qadc_pot.xc  qadc_pot_lut_gen.c  qadc_rheo.xc  qadc_utils.h  qadc_utils.xc
tests/: CMakeLists.txt  test_qadc_c_api.py  test_qadc_model_tolerance.py  test_qadc_pot_lut.py
tests/qadc_c_interface/: CMakeLists.txt
tests/qadc_c_interface/src/: main.c
tests/qadc_lut_pot/: CMakeLists.txt
tests/qadc_lut_pot/Unix Makefiles/: manifest.txt
tests/qadc_lut_pot/src/: main.xc
tests/qadc_lut_pot_characterisation/: CMakeLists.txt  plot.py
tests/qadc_lut_pot_characterisation/src/: main.xc
(+1 files in other folders)
